# learn-to-play-it

./: .gitignore  FUTURE.md  LICENSE  PLAN.md  README.md  SECURITY.md  TESTING.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CNAME  import.html  index.html  make_social_preview.py  style.css
learntoplayit/: app.py  audio.py  beats.py  cli.py  display.py  fmt.py  gui.py  player.py  ringbuffer.py  safe_torch.py  separate.py
learntoplayit/resources/icons/: LICENSE
packaging/: audit_locks.sh  suppressed-cves.txt  update_ffmpeg.sh  update_locks.sh
packaging/macos/: README.md  build_app.sh  ffmpeg-conda-lock.txt  learn-to-play-it.spec  ltpi_gui_entry.py  make_dmg.sh  make_icns.sh  patch_info_plist.py  publish_release.sh  release.sh  sign_and_notarize.sh  verify_bundle.py
tests/: conftest.py  test_audio.py  test_beats.py  test_display_waveform.py  test_gui_zoom.py  test_player_countin.py  test_player_position.py  test_player_waveform_beats.py  test_ringbuffer.py  test_separate.py  test_smoke.py
