[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-to-play-it"
version = "0.1.0"
description = "Learn to play musical parts from recorded songs"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "demucs",
    "torchcodec",
    "pylibrb",
    "soundfile",
    "sounddevice",
    "numpy",
    "click",
    "beat-this",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]
test = [
    "pytest",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["learntoplayit*"]

[tool.setuptools.package-data]
learntoplayit = ["resources/icons/*.svg", "resources/*.png"]

[project.scripts]
ltpi = "learntoplayit.cli:main"

[project.gui-scripts]
ltpi-gui = "learntoplayit.app:main"
