[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-to-play-it"
version = "0.1.3"
description = "Learn to play musical parts from recorded songs"
license = "GPL-2.0-only"
requires-python = ">=3.10"
dependencies = [
    "demucs",
    "torchcodec",
    "pylibrb",
    "soundfile",
    "sounddevice",
    "numpy",
    "click",
    "beat-this",
    # certifi provides a CA bundle for HTTPS verification in the frozen .app.
    # The bundled Python interpreter can't access macOS Keychain trust roots,
    # so torch.hub model downloads fail without it. Harmless from source.
    "certifi",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]
test = [
    "pytest",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["learntoplayit*"]

[tool.setuptools.package-data]
learntoplayit = ["resources/icons/*.svg", "resources/*.png"]

[project.scripts]
ltpi = "learntoplayit.cli:main"

[project.gui-scripts]
ltpi-gui = "learntoplayit.app:main"
